--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,24 @@
   border: 2px solid #37c7f0 !important;
   color: #37c7f0;
 }
+#escuchando-des .isActive{
+  border: 2px solid #fb5b87 !important;
+  color: #fb5b87;
+}
+#escuchando-des .isActive:focus{
+  border: 2px solid #fb5b87 !important;
+  color: #fb5b87;
+}
+
+
+#agradeciendo-des .isActive{
+  border: 2px solid #37c7f0 !important;
+  color: #37c7f0;
+}
+#agradeciendo-des .isActive:focus{
+  border: 2px solid #37c7f0 !important;
+  color: #37c7f0;
+}
     </style>
   </body>
 </html>
