--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,15 @@
   border: 2px solid #37c7f0 !important;
   color: #37c7f0;
 }
+
+#desarrollando-des .isActive{
+  border: 2px solid #ff8334 !important;
+  color: #ff8334;
+}
+#desarrollando-des .isActive:focus{
+  border: 2px solid #ff8334 !important;
+  color: #ff8334;
+}
     </style>
   </body>
 </html>
