--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,6 @@
   border: 2px solid #fb5b87 !important;
   color: #fb5b87;
 }
-
-
 #agradeciendo-des .isActive{
   border: 2px solid #37c7f0 !important;
   color: #37c7f0;
@@ -60,7 +58,6 @@
   border: 2px solid #37c7f0 !important;
   color: #37c7f0;
 }
-
 #desarrollando-des .isActive{
   border: 2px solid #ff8334 !important;
   color: #ff8334;
@@ -68,6 +65,14 @@
 #desarrollando-des .isActive:focus{
   border: 2px solid #ff8334 !important;
   color: #ff8334;
+}
+#balanceando-des .isActive{
+  border: 2px solid #42e8b4 !important;
+  color: #42e8b4;
+}
+#balanceando-des .isActive:focus{
+  border: 2px solid #42e8b4 !important;
+  color: #42e8b4;
 }
     </style>
   </body>
