--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,24 @@
   border: 2px solid #42e8b4 !important;
   color: #42e8b4;
 }
+
+#celebrando-des .isActive{
+  border: 2px solid #f66f01 !important;
+  color: #f66f01;
+}
+#celebrando-des .isActive:focus{
+  border: 2px solid #f66f01 !important;
+  color: #f66f01;
+}
+
+#reconociendo-des .isActive{
+  border: 2px solid #f66f01 !important;
+  color: #f66f01;
+}
+#reconociendo-des .isActive:focus{
+  border: 2px solid #f66f01 !important;
+  color: #f66f01;
+}
     </style>
   </body>
 </html>
