--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/lity.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body onload="myFunction()" data-spy="scroll" data-target="#navegador">
     <noscript>
       <strong>We're sorry but e-gptw doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
@@ -18,25 +18,35 @@
     <!-- built files will be auto injected -->
     <script src="js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    
     <script src="js/lity.js"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
     <script>
+      function myFunction() {
+        $('#navegador ul li.btn-ancla a').click(function(e){
+          e.preventDefault();
+          $('html, body').stop().animate({scrollTop: $($(this).attr('href')).offset().top}, 1450);
+        });
+
+        $(window).scroll(function() {
+          var h = $(document).scrollTop();
+          if(h > 80){
+            $('.floaticons').show('fade');
+          }
+          else{
+            $('.floaticons').hide('fade');
+          }
+        });
+
+      }      
       $(document).ready(function(){
         $("#navegador  a").click(function(){
           $("#navegador a.active").removeClass("active");
           $(this).addClass("active");
         });
-
-
-
         $ancho = document.querySelector('#abc .floro .fondo').naturalWidth;
-/*
-        console.log($ancho);
 
-        $pantalla = $('html').width() + 17;
-
-        console.log($pantalla);
-
-*/
+        // $("#inline-reconociendo .descr br").remove();
 
       });
     </script>
@@ -122,22 +132,19 @@
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
-  width: 290px;
+  width: 340px;
 }
 #inline-reconociendo .cargo{
   font-family: 'Barlow-Bold';
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 19px;
 }
-
 #inline-reconociendo .heart{
   bottom: 0;
   position: absolute;
 }
-
-
 #inline-reconociendo .img-persona img{
   margin-bottom: -30px;
     margin-left: -60px;
@@ -147,6 +154,12 @@
   font-style: normal;
   font-weight: 200;
   font-size: 18px;
+  line-height: 22px;
+}
+#inline-reconociendo .descr b{
+  font-family: 'Barlow-Bold';
+  font-style: normal;
+  font-weight: 700;  
 }
     </style>
   </body>
