--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Elovers</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/lity.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body onload="myFunction()">
@@ -19,8 +20,15 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/lity.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script>
+
+      document.addEventListener("DOMContentLoaded",function(event){
+        new WOW().init();
+      });
+
       function myFunction() {
+
         var scrollActual = $(document).scrollTop();
         var scrollPos = $(document).scrollTop();
         $('#navegador a').each(function () {
@@ -95,6 +103,9 @@
               $("#navegador span").css("color","#fff");
             }
             if($a == 'celebrando'){
+              $("#navegador span").css("color","#222473");
+            }
+            if($a == 'reconociendo'){
               $("#navegador span").css("color","#222473");
             }
 
