--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Elovers</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/lity.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body onload="myFunction()">
@@ -20,12 +20,12 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/lity.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script> -->
     <script>
 
-      document.addEventListener("DOMContentLoaded",function(event){
-        new WOW().init();
-      });
+      // document.addEventListener("DOMContentLoaded",function(event){
+      //   new WOW().init();
+      // });
 
       function myFunction() {
 
@@ -108,8 +108,9 @@
             if($a == 'reconociendo'){
               $("#navegador span").css("color","#222473");
             }
-
-            
+            // if($a == 'intermedio1' || $a == 'intermedio2' || $a == 'intermedio3' || $a == 'intermedio4' || $a == 'intermedio5' || $a == 'intermedio6' || $a == 'intermedio7') {
+            //   $("#navegador span").css("color","#222473");
+            // }            
 
             if($a == 'intermedio1'){
               $('#navegador ul li a.section-1').addClass('active');
