--- a/public/index.html
+++ b/public/index.html
@@ -83,45 +83,45 @@
             // text-shadow: -1px 1px 5px #00000080;
             if($a == 'section-1'){
               $("#navegador span").css("color","#fff");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #00000080");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #00000080");
             }
             if($a == 'inspirando'){
               $("#navegador span").css("color","#fff");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #00000080");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #00000080");
             }
             if($a == 'hablando'){
               $("#navegador span").css("color","#222473");
               // $("#navegador span").css("text-shadow","unset");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #fff");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #fff");
             }
             if($a == 'escuchando'){
               $("#navegador span").css("color","#222473");
               // $("#navegador span").css("text-shadow","unset");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #fff");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #fff");
             }
             if($a == 'agradeciendo'){
               $("#navegador span").css("color","#222473");
               // $("#navegador span").css("text-shadow","unset");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #fff");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #fff");
             }
             if($a == 'desarrollando'){
               $("#navegador span").css("color","#222473");
               // $("#navegador span").css("text-shadow","unset");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #fff");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #fff");
             }
             if($a == 'balanceando'){
               $("#navegador span").css("color","#fff");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #00000080");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #00000080");
             }
             if($a == 'celebrando'){
               $("#navegador span").css("color","#222473");
               // $("#navegador span").css("text-shadow","unset");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #fff");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #fff");
             }
             if($a == 'reconociendo'){
               $("#navegador span").css("color","#222473");
               // $("#navegador span").css("text-shadow","unset");
-              $("#navegador span").css("text-shadow","-1px 1px 5px #fff");
+              $("#navegador span.numero").css("text-shadow","-1px 1px 5px #fff");
             }
             // if($a == 'intermedio1' || $a == 'intermedio2' || $a == 'intermedio3' || $a == 'intermedio4' || $a == 'intermedio5' || $a == 'intermedio6' || $a == 'intermedio7') {
             //   $("#navegador span").css("color","#222473");
