--- a/public/index.html
+++ b/public/index.html
@@ -285,9 +285,21 @@
   font-style: normal;
   font-weight: 700;  
 }
-/* .card-carousel--nav__left, .card-carousel--nav__right{
-  margin-top: 7px !important;
-} */
+
+@media(max-width: 1366px){
+  .card-carousel{
+  width: 720px !important;
+
+}
+}
+
+@media(max-width: 1199px){
+.card-carousel{
+  width: 620px !important;
+
+}
+}
+
     </style>
   </body>
 </html>
